add portfolio image and change image profile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="https://placekitten.com/300/300" />
+            <img src="./assets/profile.png" />
             <h1>Rofiatul Adawiyah</h1>
             <p>Get in touch with me</p>
             <div class="contact">
@@ -96,7 +96,18 @@
             <h1>Portfolio</h1>
         </aside>
         <section>
-
+            <img src="./assets/portfolio1.jpg" class="portfolio" />
+            <img src="./assets/portfolio2.jpg" class="portfolio" />
+            <img src="./assets/portfolio3.jpg" class="portfolio" />
+            <img src="./assets/portfolio4.jpg" class="portfolio" />
+            <img src="./assets/portfolio5.jpg" class="portfolio" />
+            <img src="./assets/portfolio6.jpg" class="portfolio" />
+            <img src="./assets/portfolio7.jpg" class="portfolio" />
+            <img src="./assets/portfolio8.jpg" class="portfolio" />
+            <img src="./assets/portfolio9.jpg" class="portfolio" />
+            <img src="./assets/portfolio10.jpg" class="portfolio" />
+            <img src="./assets/portfolio11.jpg" class="portfolio" />
+            <img src="./assets/portfolio12.jpg" class="portfolio" />
         </section>
     </main>
     <footer>
