add form contact

--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
             <img src="./assets/portfolio12.jpg" class="portfolio" />
         </section>
     </main>
+    <main>
+        <aside>
+            <h1>Contact Me</h1>
+        </aside>
+        <section>
+            <form>
+                <label>Name</label>
+                <input type="text" placeholder="Input your name..." />
+                <label>Email</label>
+                <input type="text" placeholder="Input your email..." />
+                <label>Message</label>
+                <textarea placeholder="Write shomething..."></textarea>
+                <input type="submit" value="submit" />
+            </form>
+        </section>
+    </main>
     <footer>
         <h4>Created by Adawiyah | 2022</h4>
     </footer>
